data/derived/comb/progs/unify/prog5800.ml.out
Characters 65-99:
  | h::t -> bigAdd((mulByDigit h l2), bigMul(t, l2));;
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
